<resources>
    <string name="app_name">Accelerometer Sensor</string>
    <string name="lbl_x">X</string>
    <string name="lbl_y">Y</string>
    <string name="lbl_z">Z</string>
    <string name="lbl_delayUI">UI</string>
    <string name="lbl_delayNormal">Normal</string>
    <string name="lbl_delayGame">Game</string>
    <string name="lbl_delayFastest">Fastest</string>
    <string name="lbl_record">Record</string>
    <string name="lbl_stop">Stop</string>
    <string name="lbl_upload">Upload</string>
    <string name="lbl_save">Save</string>
    <string name="err_uploadSuccess">Upload Successful!</string>
    <string name="err_emptyData">No recorded data available...</string>
    <string name="lbl_saveFile">Save as CSV</string>
    <string name="msg_saveLocally">Settings Changed: Save data to local storage as CSV</string>
    <string name="msg_cloudOnly">Settings Changed: Upload data to cloud storage.</string>
    <string name="err_saveSuccess">Saved to: %s</string>
    <string name="err_saveFail">Save Failed!</string>
    <string name="file_name">%s.csv</string>
    <string name="dir_data">recorded_data</string>
    <string name="collectionPath">CoordinateSets</string>
    <string name="collectionPath2">CSV</string>
    <string name="err_uploadError">Upload Failed!</string>
</resources>
